# catan-engine

./: .gitignore  README.MD  pyproject.toml  pytest.ini  requirements.txt
src/: main.py
src/controller/: agents.py  diff.py  orchestrator.py  selectors.py  session.py
src/domain/: enums.py  ids.py
src/domain/actions/: all_actions.py  base.py
src/domain/board/: edge.py  hex_geometry.py  layout.py  occupancy.py  port.py  scenario.py  tile.py  topology.py  vertex.py
src/domain/engine/: game_engine.py  player_view.py  randomizer.py  step_result.py
src/domain/events/: all_events.py  base.py
src/domain/game/: bank.py  config.py  dev_deck.py  player_state.py  state.py
src/domain/rules/: build_rules.py  dev_card_rules.py  (+8 more)
src/engine/: enums.py
src/gui/: app.py  geometry.py  main_window.py  theme.py
src/serialization/: __init__.py  codec.py  replay.py
tests/: conftest.py  test_game_model.py  test_robber_rules.py  test_topology.py
tests/controller/: test_agents.py  test_diff.py  test_selectors.py  test_session.py  test_smoke.py
tests/fixtures/: __init__.py  boards.py  states.py
tests/integration/: test_normal_turn.py  test_setup_flow.py  test_stalemate.py  test_win_condition.py
tests/property/: test_invariants.py  test_legal_actions_safe.py
tests/rl/: test_action_encoder.py  test_env_basic.py  test_random_agent.py  test_smoke.py  test_tournament.py
tests/unit/: test_bug_fixes.py  test_hex_geometry.py  test_legal_actions.py  test_longest_road.py  test_robber_rules.py  test_scenario.py  test_topology.py  test_trade_rules.py  test_transitions.py
(+25 files in other folders)
