[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-engine"
version = "0.1.0"

[project.optional-dependencies]
rl = [
    "torch>=2.2",
    "numpy>=1.26",
    "tensorboard>=2.16",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]